# FMIKit-Simulink

./: .gitignore  CMakeLists.txt  FMI Kit.prj  FMIKit.prj  FMIKit_blocks.slx  FMIKit_blocks_R2012b.slx  LICENSE.txt  README.md  azure-pipelines.yml  build.bat  info.xml  initialize_fmikit.m  merge_sfun.py  sfun_fmurun.cpp  slblocks.m
+FMIKit/: closeBlockDialog.m  dumpParameters.m  getBlockDialog.m  getInportLabels.m  getModelDescription.m  getOutportLabels.m  getSolverRelativeTolerance.m  getStartValue.m  getUnzipDirectory.m  getVariableNames.m  initialize.m  isResettable.m  loadFMU.m  majorVersion.m  minorVersion.m  patchVersion.m  removeBlockResources.m  setDirectInput.m  setInterfaceType.m  setOutputPorts.m  setRelativeTolerance.m  setResettable.m  setSFunctionParameters.m  setSampleTime.m  setStartValue.m  setUseSourceCode.m  showBlockDialog.m  showBlockDialogHelp.m  updateUserData.m  version.m
+FMIKit/private/: applyDialog.m  getUserData.m  userDataFromStruct.m  userDataToStruct.m
Java/: .gitignore  pom.xml
Java/src/main/java/fmikit/: BuildDescription.java  BuildDescriptionReader.java  CoSimulation.java  DefaultExperiment.java  Dependency.java  FMI1ModelDescriptionHandler.java  FMI2ModelDescriptionHandler.java  Implementation.java  ModelDescription.java  ModelDescriptionHandler.java  ModelDescriptionReader.java  ModelExchange.java  ModelStructure.java  ScalarVariable.java  SimpleType.java  XmlUtil.java
Java/src/main/java/fmikit/ui/: EditTest.java  FMUBlockDialog.form  FMUBlockDialog.java  ReadTest.java  UserData.java  Util.java
Java/src/main/java/fmikit/ui/tree/: DescriptionTableCellRenderer.java  InputCellEditor.java  InputCellRenderer.java  NameTreeCellRenderer.java  OutportCellEditor.java  OutportTableCellRenderer.java  StartCellEditor.java  StartTableCellRenderer.java  UnitTableCellRenderer.java  VariablesTreeTableModel.java
Java/src/main/resources/icons/: icons.afdesign
Java/src/main/resources/schema/fmi1/: fmiModelDescription.xsd
Java/src/main/resources/schema/fmi3/: fmi3Unit.xsd
Java/src/test/java/: DummyUnitTest.java
docs/: build.md  changelog.md  contributing.md  fmu_export.md  fmu_import.md  index.md  md2html.py  pull_request_template.md  template.html
examples/: fmikit_demo_BouncingBall.slx
examples/BouncingBall/: modelDescription.xml
examples/BouncingBall/binaries/darwin64/: BouncingBall.dylib
examples/BouncingBall/documentation/: LICENSE.txt  index.html
examples/BouncingBall/sources/: all.c  config.h  fmi2Functions.c  model.c  model.h  slave.c
grtfmi/: CMakeLists.txt  copypdb.bat  fmi2Functions.c  fmi3Functions.c  grtfmi.tlc  grtfmi_block_path.m  grtfmi_build_directory.m  grtfmi_cmake_default_generator.m  grtfmi_cmake_generators.m  grtfmi_compile_wsl.m  grtfmi_exclude_variable.m  grtfmi_filename.m  grtfmi_find_cmake.m  grtfmi_generate_guid.m  grtfmi_generate_lookup_table.m  grtfmi_generate_lookup_table_fmi2.m  grtfmi_generate_lookup_table_fmi3.m  grtfmi_install_cmake.m  grtfmi_is_lookup_table.m  grtfmi_make_rtw_hook.m  grtfmi_model_sources.m  grtfmi_selectcallback.m  grtfmi_simscape_sources.m  grtfmi_start_value.m  grtfmi_unique.m  grtfmi_xml_datetime.m  grtfmi_xml_encode.m  grtfmi_xml_from_structure.m  grtfmibd.tlc  grtfmilib.tlc  grtfmixml.tlc
html/: helptoc.xml  style.css
include/: CMakeLists.txt  FMI.h  FMI1.h  FMI2.h  FMI3.h  FMU.h  FMU1.h  FMU2.h  fmi1.h  fmi1Functions.h  fmiFunctions.h  fmiModelFunctions.h  fmiModelTypes.h  fmiPlatformTypes.h  sfun_fmu_common.c  sfun_fmu_fmi1_cs.c  sfun_fmu_fmi1_me.c  sfun_fmu_fmi2_cs.c  sfun_fmu_fmi2_me.c
mdl/: FMIKit_blocks.mdl
rtwsfcnfmi/: CMakeLists.txt  fmi2Functions.c  makeValueRef.m  revert2013b.m  rtPrintfNoOp_cpp.cpp  rt_matrx_wrapper.c  rtwsfcnfmi.tlc  rtwsfcnfmi_make_rtw_hook.m  rtwsfcnfmi_model_sources.m  rtwsfcnfmi_selectcallback.m  rtwsfcnfmilib.tlc  rtwsfcnfmixml.tlc  sfcnmei.tlc  sfunction.c  sfunction.h
rtwsfcnfmi/c/: fmi.h  fmi1.c  fmi1Functions.c  fmi1Functions_.h  fmi1ModelFunctions.c  fmi1ModelFunctions_.h  fmi2.c  fmi2Functions.c  fmi2Functions_.h  fmi2ModelFunctions.c  fmi2ModelFunctions_.h
rtwsfcnfmi/c/fmi/: fmiFunctions.h  fmiModelFunctions.h  fmiPlatformTypes.h
rtwsfcnfmi/m/: makeBlockPath.m  makeDateAndDoc.m  makeGUID.m  makeMatlabBin.m  makeValueRef.m  revert2013b.m  rtwsfcnfmi_init.m  rtwsfcnfmi_tmf.m
rtwsfcnfmi/tlc/: rtwsfcnfmi.tlc  rtwsfcnfmi_18b_vcx64.tmf  rtwsfcnfmi_make_rtw_hook.m  rtwsfcnfmi_unix.tmf  rtwsfcnfmi_vc.tmf  rtwsfcnfmi_vcx64.tmf  sfcnfmilib.tlc  sfcnmdi1.tlc  sfcnmdi2.tlc  sfcnmei.tlc
src/: FMI.c  FMI1.c  FMI2.c  FMI3.c  FMU.cpp  FMU1.cpp  FMU2.cpp  sfun_fmurun.c
tests/: .gitignore  BouncingBall.slx  BouncingBall_ref.csv  TestModel1.slx  TestModel1_ref.csv  TestModel2.slx  TestModel2_in.csv  TestModel2_ref.csv  TriggeredSubsystems.slx  TriggeredSubsystems_ref.csv  build_test_models.m  export_fmus.m  get_ref.m  rtwmakecfg.m  rtwsfcnfmi_export_model.m  test_grtfmi.m  test_grtfmi_export.m  test_grtfmi_sldemo_clutch.m  test_rtwsfcnfmi.m  timesthree.c
tests/include/: multiply.h
tests/src/: multiply.c
